[web] Fix the cover art being distorted #1689

--- a/web-src/src/mystyles.scss
+++ b/web-src/src/mystyles.scss
@@ -124,7 +124,7 @@ a.navbar-item {
     }
     img {
       border-radius: $radius-large;
-      height: calc(100vh - 26rem);
+      max-height: calc(100vh - 26rem);
     }
     &.is-masked {
       filter: blur(0.5rem) opacity(0.2);
